--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <section class="">
       <div class="container-lg py-5">
+        <!-- title --->
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="text-center">
@@ -21,7 +22,40 @@
             </div>
           </div>
           <div class="section-container">
-            <div class="message-content"></div>
+            <!-- message --->
+            <div class="message-content">
+              <div class="d-flex align-items-center">
+                <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+                  <img src="asset/message-icon.png" alt="" />
+                </div>
+                <div style="margin-left: 20px">
+                  <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Saved Message</p>
+                  <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">You have successfully saved this message</p>
+                </div>
+              </div>
+            </div>
+            <!-- file --->
+            <div class="file-content">
+              <img src="asset/file-icon.png" alt="" />
+            </div>
+            <!-- mspencer --->
+            <div class="spencer-content">
+              <div class="d-flex align-items-center">
+                <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+                  <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">SB</p>
+                </div>
+                <div class="circle-info-spencer">
+                  <p style="color: #ffffff; font-size: 6px; font-weight: 700px; margin: 0">3</p>
+                </div>
+                <div style="margin-left: 20px">
+                  <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Spencer Brooks</p>
+                  <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">Have you seen the project requi…</p>
+                </div>
+                <div class="time-spencer">
+                  <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400; opacity: 0.75">3:08 PM</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
