--- a/index.html
+++ b/index.html
@@ -7,55 +7,117 @@
     <link href="style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
-  <body>
-    <section class="">
-      <div class="container-lg py-5">
+  <body class="bg-success">
+    <section>
+      <div>
         <!-- title --->
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="text-center">
-              <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 25px">Transform your communications</p>
-              <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 100px">
-                Our mobile app is the only thing you need to change the <br />
-                way you communicate with your team
-              </p>
+        <div class="text-center">
+          <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 25px">Transform your communications</p>
+          <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 100px">
+            Our mobile app is the only thing you need to change the <br />
+            way you communicate with your team
+          </p>
+        </div>
+
+        <div class="section-container">
+          <!-- attachment --->
+          <div class="attachment-content">
+            <div class="d-flex align-items-center">
+              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+                <img src="asset/attachment-icon.png" alt="" />
+              </div>
+              <div style="margin-left: 20px">
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Saved Message</p>
+                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">You have successfully saved this message</p>
+              </div>
             </div>
           </div>
-          <div class="section-container">
-            <!-- message --->
-            <div class="message-content">
-              <div class="d-flex align-items-center">
-                <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
-                  <img src="asset/message-icon.png" alt="" />
-                </div>
-                <div style="margin-left: 20px">
-                  <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Saved Message</p>
-                  <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">You have successfully saved this message</p>
-                </div>
+          <!-- file --->
+          <div class="file-content">
+            <img src="asset/file-icon.png" alt="" />
+          </div>
+          <!-- spencer --->
+          <div class="spencer-content">
+            <div class="d-flex align-items-center">
+              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+                <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">SB</p>
+              </div>
+              <div class="circle-info-spencer">
+                <p style="color: #ffffff; font-size: 6px; font-weight: 700px; margin: 0">3</p>
+              </div>
+              <div style="margin-left: 20px">
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Spencer Brooks</p>
+                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">Have you seen the project requi…</p>
+              </div>
+              <div class="time-spencer">
+                <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400; opacity: 0.75">3:08 PM</p>
               </div>
             </div>
-            <!-- file --->
-            <div class="file-content">
-              <img src="asset/file-icon.png" alt="" />
-            </div>
-            <!-- mspencer --->
-            <div class="spencer-content">
-              <div class="d-flex align-items-center">
-                <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
-                  <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">SB</p>
-                </div>
-                <div class="circle-info-spencer">
-                  <p style="color: #ffffff; font-size: 6px; font-weight: 700px; margin: 0">3</p>
-                </div>
-                <div style="margin-left: 20px">
-                  <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Spencer Brooks</p>
-                  <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">Have you seen the project requi…</p>
-                </div>
-                <div class="time-spencer">
-                  <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400; opacity: 0.75">3:08 PM</p>
-                </div>
+          </div>
+          <!-- sales --->
+          <div class="sales-content">
+            <div class="d-flex align-items-center" style="margin-bottom: 20px">
+              <div style="width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid var(--dark-blue)">
+                <img src="asset/calender-icon.png" alt="" />
+              </div>
+              <div style="margin-left: 20px">
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Sales Meeting</p>
+                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">10:30 AM 05 May 2020</p>
               </div>
             </div>
+            <div class="info-sales" style="display: flex">
+              <div style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
+                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">KR</p>
+              </div>
+              <div class="mj-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
+                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">MJ</p>
+              </div>
+              <div class="oi-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
+                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">OI</p>
+              </div>
+              <div class="plus-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
+                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">+3</p>
+              </div>
+            </div>
+          </div>
+          <!-- uploading --->
+          <div class="uploading-content">
+            <div class="d-flex align-items-center">
+              <div>
+                <img src="asset/uploading-icon.png" alt="" />
+              </div>
+              <div style="margin-left: 20px">
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin: 0; font-family: 'Basic', sans-serif">Uploading Document</p>
+                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0; font-family: 'Basic', sans-serif">27,09/ 78,93 GB</p>
+              </div>
+            </div>
+          </div>
+          <!-- message --->
+          <div class="message-content">
+            <img src="asset/message-icon.png" alt="" />
+          </div>
+          <!-- amy --->
+          <div class="amy-content">
+            <div class="d-flex align-items-center">
+              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+                <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">AS</p>
+              </div>
+              <div class="circle-info-amy">
+                <p style="color: #ffffff; font-size: 6px; font-weight: 700px; margin: 0">2</p>
+              </div>
+              <div style="margin-left: 20px">
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Amy Smith</p>
+                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">Could please call me now? It is i…</p>
+              </div>
+              <div class="time-amy">
+                <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400; opacity: 0.75">5:18 PM</p>
+              </div>
+            </div>
+          </div>
+          <!-- progress --->
+          <div class="progress-content">
+            <img src="asset/progress-icon.png" alt="" style="margin-bottom: 20px" />
+            <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400">6,02/ 7,98 GB</p>
           </div>
         </div>
       </div>
