update: tidy up index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
   <body class="bg-success">
+    <!-- Ivan --->
+    <!-- Transform --->
     <section>
       <div>
         <!-- title --->
@@ -19,11 +21,11 @@
           </p>
         </div>
 
-        <div class="section-container">
+        <div class="transform-section-container">
           <!-- attachment --->
           <div class="attachment-content">
             <div class="d-flex align-items-center">
-              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+              <div class="attachment-icon">
                 <img src="asset/attachment-icon.png" alt="" />
               </div>
               <div style="margin-left: 20px">
@@ -39,11 +41,11 @@
           <!-- spencer --->
           <div class="spencer-content">
             <div class="d-flex align-items-center">
-              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+              <div class="circle-spencer">
                 <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">SB</p>
               </div>
               <div class="circle-info-spencer">
-                <p style="color: #ffffff; font-size: 6px; font-weight: 700px; margin: 0">3</p>
+                <p class="info-spencer">3</p>
               </div>
               <div style="margin-left: 20px">
                 <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Spencer Brooks</p>
@@ -57,7 +59,7 @@
           <!-- sales --->
           <div class="sales-content">
             <div class="d-flex align-items-center" style="margin-bottom: 20px">
-              <div style="width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid var(--dark-blue)">
+              <div class="sales-icon">
                 <img src="asset/calender-icon.png" alt="" />
               </div>
               <div style="margin-left: 20px">
@@ -66,17 +68,17 @@
               </div>
             </div>
             <div class="info-sales" style="display: flex">
-              <div style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
-                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">KR</p>
+              <div class="kr-sales">
+                <p class="text-info-sales">KR</p>
               </div>
-              <div class="mj-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
-                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">MJ</p>
+              <div class="mj-sales">
+                <p class="text-info-sales">MJ</p>
               </div>
-              <div class="oi-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
-                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">OI</p>
+              <div class="oi-sales">
+                <p class="text-info-sales">OI</p>
               </div>
-              <div class="plus-sales" style="background-color: var(--white-blue); width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 2px solid #ffffff">
-                <p style="color: var(--dark-blue); font-size: 10px; font-weight: 700; margin: 0">+3</p>
+              <div class="plus-sales">
+                <p class="text-info-sales">+3</p>
               </div>
             </div>
           </div>
@@ -87,8 +89,8 @@
                 <img src="asset/uploading-icon.png" alt="" />
               </div>
               <div style="margin-left: 20px">
-                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin: 0; font-family: 'Basic', sans-serif">Uploading Document</p>
-                <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0; font-family: 'Basic', sans-serif">27,09/ 78,93 GB</p>
+                <p class="title-uploading">Uploading Document</p>
+                <p class="subtitle-uploading">27,09/ 78,93 GB</p>
               </div>
             </div>
           </div>
@@ -99,7 +101,7 @@
           <!-- amy --->
           <div class="amy-content">
             <div class="d-flex align-items-center">
-              <div style="background-color: var(--white-blue); width: 60px; height: 60px; border-radius: 50%; display: flex; justify-content: center; align-items: center">
+              <div class="circle-amy">
                 <p style="color: var(--dark-blue); font-size: 18px; font-weight: 700; margin: 0">AS</p>
               </div>
               <div class="circle-info-amy">
