--- a/index.html
+++ b/index.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title></title>
 </head>
 <body>
     <section>
-        <div class="container-lg">
+        <div class="container-lg py-5">
+            <div class="text-center">
+                <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 20px;">Explore our simple pricing</p>
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 80px;">We offer one of the most competitive prices on the<br>market for everyone.</p>
+            </div>
+
             <div class="row justify-content-center">
-                <div class="col-lg-12">
-                    <div class="text-center">
-                        <p>Explore our simple pricing</p>
-                        <p>We offer one of the most competitive prices on the market for everyone.</p>
+                <div class="col-md-auto">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                          <h5>Basic</h5>
+                          <h1>$9</h1>
+                          <h5>Per month</h5>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                    <div class="card" id="white">
+                        <div class="card-body text-center" style="background-color: white;">
+                            <h5>Premium</h5>
+                            <h1>$29</h1>
+                            <h5>Per month</h5>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h5>Enterprice</h5>
+                            <h1>$129</h1>
+                            <h5>Per month</h5>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
                 </div>
             </div>
