--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
-  <body class="bg-success">
+  <body>
     <!-- Ivan --->
     <!-- Transform --->
-    <section>
+    <section class="transform-section">
       <div>
         <!-- title --->
         <div class="text-center">
@@ -29,7 +29,7 @@
                 <img src="asset/attachment-icon.png" alt="" />
               </div>
               <div style="margin-left: 20px">
-                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Saved Message</p>
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Message Saved</p>
                 <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">You have successfully saved this message</p>
               </div>
             </div>
@@ -120,6 +120,150 @@
           <div class="progress-content">
             <img src="asset/progress-icon.png" alt="" style="margin-bottom: 20px" />
             <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400">6,02/ 7,98 GB</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- increase --->
+    <section style="margin-bottom: 150px">
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="text-start">
+          <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 25px">
+            Increase the<br />
+            efficiency within<br />
+            your company
+          </p>
+          <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 50px">
+            Our app is the great way for you to start<br />
+            getting more tasks done.
+          </p>
+          <button class="increase-button">Get the app</button>
+        </div>
+        <div class="increase-container">
+          <div class="increase-content">
+            <!-- Daily--->
+            <div class="daily-container">
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Daily Standup</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">2:30 PM 15 Apr 2020</p>
+                  </div>
+                </div>
+                <div class="info-sales" style="display: flex">
+                  <div class="ku-daily">
+                    <p class="text-info-sales">KU</p>
+                  </div>
+                  <div class="mg-daily">
+                    <p class="text-info-sales">MG</p>
+                  </div>
+                  <div class="ai-daily">
+                    <p class="text-info-sales">AI</p>
+                  </div>
+                  <div class="plus-daily">
+                    <p class="text-info-sales">+29</p>
+                  </div>
+                </div>
+              </div>
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Daily Emails</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">8:30 AM 28 Apr 2020</p>
+                  </div>
+                </div>
+                <div class="info-sales" style="display: flex">
+                  <div class="ku-daily">
+                    <p class="text-info-sales">MC</p>
+                  </div>
+                  <div class="mg-daily">
+                    <p class="text-info-sales">KY</p>
+                  </div>
+                  <div class="ai-daily">
+                    <p class="text-info-sales">AJ</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Marketing --->
+            <div class="daily-container">
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Marketing Call</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">4:45 PM 30 May 2020</p>
+                  </div>
+                </div>
+                <div class="info-sales" style="display: flex">
+                  <div class="ku-daily">
+                    <p class="text-info-sales">CO</p>
+                  </div>
+                  <div class="mg-daily">
+                    <p class="text-info-sales">VN</p>
+                  </div>
+                </div>
+              </div>
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Project Meeting</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">5:45 PM 1 Jun 2020</p>
+                  </div>
+                </div>
+                <div class="info-sales" style="display: flex">
+                  <div class="ku-daily">
+                    <p class="text-info-sales">TR</p>
+                  </div>
+                  <div class="mg-daily">
+                    <p class="text-info-sales">DE</p>
+                  </div>
+                  <div class="ai-daily">
+                    <p class="text-info-sales">PB</p>
+                  </div>
+                  <div class="plus-daily">
+                    <p class="text-info-sales">+2</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Presentation --->
+            <div class="daily-container">
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Presentation</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">10:15 AM 2 Jul 2020</p>
+                  </div>
+                </div>
+              </div>
+              <div class="daily-content">
+                <div class="d-flex align-items-center" style="margin-bottom: 20px">
+                  <div class="daily-icon">
+                    <img src="asset/calender-icon.png" alt="" />
+                  </div>
+                  <div style="margin-left: 20px">
+                    <p style="color: var(--dark-blue); font-size: 16px; font-weight: 700; margin: 0">Sales Call</p>
+                    <p style="color: var(--dark-blue); font-size: 12px; font-weight: 400; margin: 0">12:30 PM 5 May 2020</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
