Update : HTML-Button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-lg py-5">
             <div class="text-center">
                 <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 20px;">Explore our simple pricing</p>
-                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 80px;">We offer one of the most competitive prices on the<br>market for everyone.</p>
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 60px;">We offer one of the most competitive prices on the<br>market for everyone.</p>
             </div>
 
             <div class="row justify-content-center">
@@ -23,17 +23,17 @@
                           <h5>Basic</h5>
                           <h1>$9</h1>
                           <h5>Per month</h5>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn border-0">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-auto">
-                    <div class="card" id="white">
-                        <div class="card-body text-center" style="background-color: white;">
+                    <div class="card" id="white" style="border-color: var(--dark-blue); border-radius: 50px;border-width: 2px;">
+                        <div class="card-body text-center" style="background-color: white; ">
                             <h5>Premium</h5>
                             <h1>$29</h1>
                             <h5>Per month</h5>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn" style="border-color: var(--dark-blue); border-radius: 50px;border-width: 2px;">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -43,10 +43,14 @@
                             <h5>Enterprice</h5>
                             <h1>$129</h1>
                             <h5>Per month</h5>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn border-0">Learn More</a>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="newsletter-container">
+                
             </div>
         </div>
     </section>
