Update : newsletter section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
                 </div>
             </div>
 
-            <div class="newsletter-container">
-                
+            <div class="newsletter-container text-center">
+                <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 20px; padding-top: 70px;">Sign up to our newsletter</p>
+                <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 60px;">Receive latest news, updates, discounts and<br>many other things every week.</p>
+                <div class="wrap-input">
+                    <div class="input-box">
+                        <input type="text" class="input border-0" placeholder="Enter your email address" aria-label="Enter your email address" aria-describedby="button-addon2">
+                        <div class="btn">></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
