--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
               </div>
             </div>
             <div class="info-sales" style="display: flex">
-              <div class="kr-sales">
+              <div class="detail1-sales">
                 <p class="text-info-sales">KR</p>
               </div>
-              <div class="mj-sales">
+              <div class="detail2-sales">
                 <p class="text-info-sales">MJ</p>
               </div>
-              <div class="oi-sales">
+              <div class="detail3-sales">
                 <p class="text-info-sales">OI</p>
               </div>
-              <div class="plus-sales">
+              <div class="detail4-sales">
                 <p class="text-info-sales">+3</p>
               </div>
             </div>
@@ -155,16 +155,16 @@
                   </div>
                 </div>
                 <div class="info-sales" style="display: flex">
-                  <div class="ku-daily">
+                  <div class="detail1-daily">
                     <p class="text-info-sales">KU</p>
                   </div>
-                  <div class="mg-daily">
+                  <div class="detail2-daily">
                     <p class="text-info-sales">MG</p>
                   </div>
-                  <div class="ai-daily">
+                  <div class="detail3-daily">
                     <p class="text-info-sales">AI</p>
                   </div>
-                  <div class="plus-daily">
+                  <div class="detail4-daily">
                     <p class="text-info-sales">+29</p>
                   </div>
                 </div>
@@ -180,13 +180,13 @@
                   </div>
                 </div>
                 <div class="info-sales" style="display: flex">
-                  <div class="ku-daily">
+                  <div class="detail1-daily">
                     <p class="text-info-sales">MC</p>
                   </div>
-                  <div class="mg-daily">
+                  <div class="detail2-daily">
                     <p class="text-info-sales">KY</p>
                   </div>
-                  <div class="ai-daily">
+                  <div class="detail3-daily">
                     <p class="text-info-sales">AJ</p>
                   </div>
                 </div>
@@ -205,10 +205,10 @@
                   </div>
                 </div>
                 <div class="info-sales" style="display: flex">
-                  <div class="ku-daily">
+                  <div class="detail1-daily">
                     <p class="text-info-sales">CO</p>
                   </div>
-                  <div class="mg-daily">
+                  <div class="detail2-daily">
                     <p class="text-info-sales">VN</p>
                   </div>
                 </div>
@@ -224,16 +224,16 @@
                   </div>
                 </div>
                 <div class="info-sales" style="display: flex">
-                  <div class="ku-daily">
+                  <div class="detail1-daily">
                     <p class="text-info-sales">TR</p>
                   </div>
-                  <div class="mg-daily">
+                  <div class="detail2-daily">
                     <p class="text-info-sales">DE</p>
                   </div>
-                  <div class="ai-daily">
+                  <div class="detail3-daily">
                     <p class="text-info-sales">PB</p>
                   </div>
-                  <div class="plus-daily">
+                  <div class="detail4-daily">
                     <p class="text-info-sales">+2</p>
                   </div>
                 </div>
