--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="transform-section">
       <div>
         <!-- title --->
-        <div class="text-center">
-          <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 25px">Transform your communications</p>
-          <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 100px">
+        <div class="text-center text-transform">
+          <p class="transform-title">Transform your communications</p>
+          <p class="transform-subtitle">
             Our mobile app is the only thing you need to change the <br />
             way you communicate with your team
           </p>
@@ -128,13 +128,13 @@
     <!-- increase --->
     <section style="margin-bottom: 150px">
       <div class="d-flex justify-content-center align-items-center">
-        <div class="text-start">
-          <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 25px">
+        <div class="text-start text-increase">
+          <p class="increase-title">
             Increase the<br />
             efficiency within<br />
             your company
           </p>
-          <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 50px">
+          <p class="increase-subtitle">
             Our app is the great way for you to start<br />
             getting more tasks done.
           </p>
@@ -268,6 +268,8 @@
         </div>
       </div>
     </section>
+
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   </body>
