--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <!-- Ivan --->
-    <!-- Transform --->
+    <!-- Transform Section --->
     <section class="transform-section">
       <div>
-        <!-- title --->
+        <!-- Transform Title --->
         <div class="text-center text-transform">
           <p class="transform-title">Transform your communications</p>
           <p class="transform-subtitle">
@@ -21,8 +21,9 @@
           </p>
         </div>
 
+        <!-- Transform Container --->
         <div class="transform-section-container">
-          <!-- attachment --->
+          <!-- Attachment --->
           <div class="attachment-content">
             <div class="d-flex align-items-center">
               <div class="attachment-icon">
@@ -34,11 +35,11 @@
               </div>
             </div>
           </div>
-          <!-- file --->
+          <!-- File --->
           <div class="file-content">
             <img src="asset/file-icon.png" alt="" />
           </div>
-          <!-- spencer --->
+          <!-- Spencer --->
           <div class="spencer-content">
             <div class="d-flex align-items-center">
               <div class="circle-spencer">
@@ -56,7 +57,7 @@
               </div>
             </div>
           </div>
-          <!-- sales --->
+          <!-- Sales --->
           <div class="sales-content">
             <div class="d-flex align-items-center" style="margin-bottom: 20px">
               <div class="sales-icon">
@@ -82,7 +83,7 @@
               </div>
             </div>
           </div>
-          <!-- uploading --->
+          <!-- Uploading --->
           <div class="uploading-content">
             <div class="d-flex align-items-center">
               <div>
@@ -94,11 +95,11 @@
               </div>
             </div>
           </div>
-          <!-- message --->
+          <!-- Message --->
           <div class="message-content">
             <img src="asset/message-icon.png" alt="" />
           </div>
-          <!-- amy --->
+          <!-- Amy --->
           <div class="amy-content">
             <div class="d-flex align-items-center">
               <div class="circle-amy">
@@ -116,7 +117,7 @@
               </div>
             </div>
           </div>
-          <!-- progress --->
+          <!-- Progress --->
           <div class="progress-content">
             <img src="asset/progress-icon.png" alt="" style="margin-bottom: 20px" />
             <p style="margin: 0; color: var(--dark-blue); font-size: 10px; font-weight: 400">6,02/ 7,98 GB</p>
@@ -125,9 +126,10 @@
       </div>
     </section>
 
-    <!-- increase --->
+    <!-- Increase Section --->
     <section style="margin-bottom: 150px">
       <div class="d-flex justify-content-center align-items-center">
+        <!-- Increase Title --->
         <div class="text-start text-increase">
           <p class="increase-title">
             Increase the<br />
@@ -140,6 +142,7 @@
           </p>
           <button class="increase-button">Get the app</button>
         </div>
+        <!-- Increase Container --->
         <div class="increase-container">
           <div class="increase-content">
             <!-- Daily--->
