Update Html and CSS

--- a/index-rozan.html
+++ b/index-rozan.html
@@ -46,14 +46,14 @@
   <section class="mt-5 mb-5">
     <div class="container ">
       <div class="row content-1">
-        <div class="col-4 p-5 align-self-center">
+        <div class="col-md-4 p-5 align-self-center">
           <div class="text-color">
             <h1>Business Communications Reinvented</h1>
             <p>Start communicating with your business team more efficiently with our app.</p>
             <button class="btn-login fw-semibold" type="button">Get the app</button>
           </div>
         </div>
-        <div class="col-8 pt-5 ps-5">
+        <div class="col-md-8 pt-md-5 ps-5">
           <div class="boxs">
             <div class="box">
               <div class="box-1">
@@ -163,7 +163,7 @@
   <section class="section">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-md-2 text-center align-self-center cards-img">
@@ -178,7 +178,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-md-2 text-center align-self-center cards-img">
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-6">
+          <div class="col-md-6">
             <div class="box-item">
               <div class="box-9">
                 <div class="border-box9">
@@ -243,7 +243,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6 align-self-center">
+          <div class="col-md-6 align-self-center">
             <div class="item-text">
               <h1>Use our app to send messages to your team</h1>
               <p>We offer really easy communications for all businesses from small to large.</p>
