--- a/index-rozan.html
+++ b/index-rozan.html
@@ -46,14 +46,14 @@
   <section class="mt-5 mb-5">
     <div class="container ">
       <div class="row content-1">
-        <div class="col-md-4 p-5 align-self-center">
+        <div class="col-md-5 content align-self-center">
           <div class="text-color">
-            <h1>Business Communications Reinvented</h1>
-            <p>Start communicating with your business team more efficiently with our app.</p>
+            <h1 class="fw-bold">Business Communications Reinvented</h1>
+            <p class="mt-3 mb-4">Start communicating with your business team more efficiently with our app.</p>
             <button class="btn-login fw-semibold" type="button">Get the app</button>
           </div>
         </div>
-        <div class="col-md-8 pt-md-5 ps-5">
+        <div class="col-md-7 pt-md-5 ps-1">
           <div class="boxs">
             <div class="box">
               <div class="box-1">
@@ -171,7 +171,7 @@
               </div>
               <div class="col-md-8 align-self-center ms-2">
                 <div class="card-body">
-                  <h5 class="card-title">Cloud based</h5>
+                  <h5 class="card-title fw-semibold">Cloud based</h5>
                   <p class="card-text">All your messages are always backed up.</p>
                 </div>
               </div>
@@ -186,7 +186,7 @@
               </div>
               <div class="col-md-8 align-self-center ms-2">
                 <div class="card-body">
-                  <h5 class="card-title">Secured</h5>
+                  <h5 class="card-title fw-semibold">Secured</h5>
                   <p class="card-text">All your messages are stored very securely.</p>
                 </div>
               </div>
@@ -245,8 +245,8 @@
           </div>
           <div class="col-md-6 align-self-center">
             <div class="item-text">
-              <h1>Use our app to send messages to your team</h1>
-              <p>We offer really easy communications for all businesses from small to large.</p>
+              <h1 class="fw-bold">Use our app to send messages to your team</h1>
+              <p class="mt-3 mb-4">We offer really easy communications for all businesses from small to large.</p>
               <button class="btn-login fw-semibold" type="button">Get the app</button>
             </div>
           </div>
