--- a/index-rozan.html
+++ b/index-rozan.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-rozan.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">\
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Document</title>
 </head>
 
 <body>
   <!-- Navbar Awal -->
-  <nav class="navbar navbar-expand-lg ">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <div class="icon-nav">
         <img src="Assets/Icon.png" alt="Navbar" class="img-nav" />
@@ -43,18 +44,18 @@
   <!-- Navbar Akhir -->
 
   <!-- Sectioan 1 awal -->
-  <section class="mt-5 mb-5">
+  <section class="section-1">
     <div class="container ">
       <div class="row content-1">
         <div class="col-md-5 content align-self-center">
-          <div class="text-color">
+          <div class="text-color" data-aos="fade-right">
             <h1 class="fw-bold">Business Communications Reinvented</h1>
             <p class="mt-3 mb-4">Start communicating with your business team more efficiently with our app.</p>
             <button class="btn-login fw-semibold" type="button">Get the app</button>
           </div>
         </div>
         <div class="col-md-7 pt-md-5 ps-1">
-          <div class="boxs">
+          <div class="boxs" data-aos="zoom-in" data-aos-delay="700">
             <div class="box">
               <div class="box-1">
                 <img src="Assets/Icon 2.png" alt="#" />
@@ -113,7 +114,7 @@
                 </div>
               </div>
             </div>
-            <div class="box-a">
+            <div class="box-a" data-aos="zoom-in" data-aos-delay="500">
               <div class="box-5">
                 <div class="border-box5">
                   <div class="icon-box5">
@@ -165,12 +166,12 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3 border-0">
-            <div class="row g-0">
+            <div class="row g-0" data-aos="fade-right">
               <div class="col-md-2 text-center align-self-center cards-img">
                 <img src="Assets/Icon 7.png" class="img-fluid rounded-start p-4" alt="icon7">
               </div>
               <div class="col-md-8 align-self-center ms-2">
-                <div class="card-body">
+                <div class="card-body" >
                   <h5 class="card-title fw-semibold">Cloud based</h5>
                   <p class="card-text">All your messages are always backed up.</p>
                 </div>
@@ -180,7 +181,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3 border-0">
-            <div class="row g-0">
+            <div class="row g-0" data-aos="fade-left">
               <div class="col-md-2 text-center align-self-center cards-img">
                 <img src="Assets/Icon 8.png" class="img-fluid rounded-start p-4" alt="icon7">
               </div>
@@ -196,55 +197,57 @@
         <div class="row mt-5">
           <div class="col-md-6">
             <div class="box-item">
-              <div class="box-9">
-                <div class="border-box9">
-                  <p>2</p>
-                </div>
-                <div class="icon-box9">
-                  <p class="text-color fw-bold">AJ</p>
-                </div>
-                <div class="ms-4">
-                  <div class="d-md-flex">
-                    <p class="text-color fw-bold font-text">Andrew Johnson</p>
-                    <p class="text-color fw-normal text-p">1:03 PM</p>
+              <div class="box-b" data-aos="flip-left">
+                <div class="box-9">
+                  <div class="border-box9">
+                    <p>2</p>
                   </div>
-                  <p class="text-color fw-normal font-p">I have seen that you are availabl…</p>
+                  <div class="icon-box9">
+                    <p class="text-color fw-bold">AJ</p>
+                  </div>
+                  <div class="ms-4">
+                    <div class="d-md-flex">
+                      <p class="text-color fw-bold font-text">Andrew Johnson</p>
+                      <p class="text-color fw-normal text-p">1:03 PM</p>
+                    </div>
+                    <p class="text-color fw-normal font-p">I have seen that you are availabl…</p>
+                  </div>
+                </div>
+                <div class="box-10 mt-4">
+                  <div class="border-box10">
+                    <p>1</p>
+                  </div>
+                  <div class="icon-box10">
+                    <p class="text-color fw-bold">DL</p>
+                  </div>
+                  <div class="ms-4">
+                    <div class="d-md-flex">
+                      <p class="text-color fw-bold font-text">Daniel Luke</p>
+                      <p class="text-color fw-normal text-p">5:27 AM</p>
+                    </div>
+                    <p class="text-color fw-normal font-p">Would you like to have a meetin…</p>
+                  </div>
+                </div>
+                <div class="box-11 mt-4">
+                  <div class="border-box11">
+                    <p>4</p>
+                  </div>
+                  <div class="icon-box11">
+                    <p class="text-color fw-bold">MC</p>
+                  </div>
+                  <div class="ms-4">
+                    <div class="d-md-flex">
+                      <p class="text-color fw-bold font-text">Mark Clarke</p>
+                      <p class="text-color fw-normal text-p">2:08 AM</p>
+                    </div>
+                    <p class="text-color fw-normal font-p">This was such a busy week. I can…</p>
+                  </div>
                 </div>
               </div>
-              <div class="box-10 mt-4">
-                <div class="border-box10">
-                  <p>1</p>
-                </div>
-                <div class="icon-box10">
-                  <p class="text-color fw-bold">DL</p>
-                </div>
-                <div class="ms-4">
-                  <div class="d-md-flex">
-                    <p class="text-color fw-bold font-text">Daniel Luke</p>
-                    <p class="text-color fw-normal text-p">5:27 AM</p>
-                  </div>
-                  <p class="text-color fw-normal font-p">Would you like to have a meetin…</p>
-                </div>
               </div>
-              <div class="box-11 mt-4">
-                <div class="border-box11">
-                  <p>4</p>
-                </div>
-                <div class="icon-box11">
-                  <p class="text-color fw-bold">MC</p>
-                </div>
-                <div class="ms-4">
-                  <div class="d-md-flex">
-                    <p class="text-color fw-bold font-text">Mark Clarke</p>
-                    <p class="text-color fw-normal text-p">2:08 AM</p>
-                  </div>
-                  <p class="text-color fw-normal font-p">This was such a busy week. I can…</p>
-                </div>
-              </div>
-            </div>
           </div>
           <div class="col-md-6 align-self-center">
-            <div class="item-text">
+            <div class="item-text" data-aos="fade-down" data-aos-delay="700">
               <h1 class="fw-bold">Use our app to send messages to your team</h1>
               <p class="mt-3 mb-4">We offer really easy communications for all businesses from small to large.</p>
               <button class="btn-login fw-semibold" type="button">Get the app</button>
@@ -256,9 +259,11 @@
   </section>
   <!-- Section 2 Akhir -->
 
+  <!-- Script JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/script-rozan.js"></script>
 </body>
 
