--- a/index-tamara.html
+++ b/index-tamara.html
@@ -10,7 +10,9 @@
     <title></title>
 </head>
 <body>
+    <!-- Tamara Utami -->
     <section>
+        <!-- Start Section Pricing -->
         <div class="container-lg py-5">
             <div class="price-section text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                 <p class="price-title">Explore our simple pricing</p>
@@ -51,7 +53,9 @@
                     </div>
                 </div>
             </div>
+            <!-- End Section Contact -->
 
+            <!-- Start Section Contact -->
             <div class="newsletter-container text-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
                 <p style="color: var(--dark-blue); font-size: 48px; font-weight: 700; margin-bottom: 20px; padding-top: 70px;">Sign up to our newsletter</p>
                 <p style="color: var(--dark-blue); font-size: 16px; font-weight: 400; margin-bottom: 60px;">Receive latest news, updates, discounts and<br>many other things every week.</p>
@@ -62,7 +66,9 @@
                     </div>
                 </div>
             </div>
+            <!-- End Section Contact -->
 
+            <!-- Start Section Footer -->
             <div class="footer-container" data-aos="fade-up" data-aos-delay="100">
                 <div class="row">
                     <div class="col">
@@ -112,6 +118,7 @@
                 </div>
             </div>
         </div>
+        <!-- End Section Footer -->
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
